--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maxium-scale=1"/>
         <meta name="ROBOTS" content="NOINDEX,NOFOLLOW">
 
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/style.css">
         
+        <title>
+            Full Service Digital Agency | Cambridgeshire &amp; Norfolk | Netmatters
+        </title>
     </head>
 
     <body>
@@ -17,18 +20,63 @@
 
                     <div class="footer-menu">
                         <h4>About Netmatters</h4>
+
+                        <ui>
+                            <li><a href="#">News</a></li>
+                            <li><a href="#">Our Careers</a></li>
+                            <li><a href="#">Our Team</a></li>
+                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="#">Privacy Policy</a></li>
+                            <li><a href="#">Cookie Policy</a></li>
+                            <li><a href="#">Data Retention</a></li>
+                            <li><a href="#">CCTV Policy</a></li>
+                            <li><a href="#">Environmental Policy</a></li>
+                            <li><a href="#">Terms &amp; Conditions</a></li>
+                        </ui>
+
                     </div>
 
                     <div class="footer-menu">
                         <h4>Our Services</h4>
+
+                        <ui>
+                            <li><a href="#">Bespoke Software</a></li>
+                            <li><a href="#">IT Support</a></li>
+                            <li><a href="#">Digital Marketing</a></li>
+                            <li><a href="#">Telecoms Services</a></li>
+                            <li><a href="#">Web Design</a></li>
+                            <li><a href="#">Cyber Security</a></li>
+                            <li><a href="#">Developer Training</a></li>
+                        </ui>
+
                     </div>
 
                     <div class="footer-menu">
                         <h4>Our Industries</h4>
+
+                        <ui>
+                            <li><a href="#">Financial Services</a></li>
+                            <li><a href="#">Construction</a></li>
+                            <li><a href="#">Retail &amp; E-Commerce</a></li>
+                            <li><a href="#">Non-Profits</a></li>
+                            <li><a href="#">SME's</a></li>
+                            <li><a href="#">Healthcare</a></li>
+                            <li><a href="#">Education &amp; Training</a></li>
+                            <li><a href="#">Travel &amp; Leisure</a></li>
+                            <li><a href="#">Manufacturing &amp; Offshore</a></li>
+                        </ui>
+
                     </div>
 
                     <div class="footer-menu">
                         <h4>Locations</h4>
+
+                        <ui>
+                            <li><a href="#">Cambridge Office</a></li>
+                            <li><a href="#">Wymondham Office</a></li>
+                            <li><a href="#">Great Yarmouth Office</a></li>
+                        </ui>
+
                     </div> 
 
                 </div>
