--- a/index.html
+++ b/index.html
@@ -16,69 +16,99 @@
     <body>
         <footer>
             <div class="container">
+
                 <div class="footer-row">
 
-                    <div class="footer-menu">
-                        <h4>About Netmatters</h4>
+                    <div class="footer-logo-box">
 
-                        <ui>
-                            <li><a href="#">News</a></li>
-                            <li><a href="#">Our Careers</a></li>
-                            <li><a href="#">Our Team</a></li>
-                            <li><a href="#">Contact Us</a></li>
-                            <li><a href="#">Privacy Policy</a></li>
-                            <li><a href="#">Cookie Policy</a></li>
-                            <li><a href="#">Data Retention</a></li>
-                            <li><a href="#">CCTV Policy</a></li>
-                            <li><a href="#">Environmental Policy</a></li>
-                            <li><a href="#">Terms &amp; Conditions</a></li>
-                        </ui>
+                        <div class="footer-logo">
+                            <picture>
+                                <source srcset="/images/nm-logo-white-med.png" type="image/png">
+                                <img class="img" src="/images/nm-logo-white-med.png" alt="Netmatters Logo">
+                            </picture>
+                        </div>
 
+                        <h4>Follow us on:</h4>
+
+                        <div class="footer-social-logos">
+                            <svg class="logo logo-1">
+                                <use xlink:href="./sprite.svg#icon-facebook"></use>
+                            </svg>
+                            <svg class="logo logo-2">
+                                <use xlink:href="./sprite.svg#icon-linkedin2"></use>
+                            </svg >
+                            <svg class="logo logo-3">
+                                <use xlink:href="./sprite.svg#icon-x"></use>
+                            </svg>
+                            <svg class="logo logo-4">
+                                <use xlink:href="./sprite.svg#icon-instagram"></use>
+                            </svg>
+                        </div>
                     </div>
 
-                    <div class="footer-menu">
-                        <h4>Our Services</h4>
+                    <div class="footer-menu-box">
 
-                        <ui>
-                            <li><a href="#">Bespoke Software</a></li>
-                            <li><a href="#">IT Support</a></li>
-                            <li><a href="#">Digital Marketing</a></li>
-                            <li><a href="#">Telecoms Services</a></li>
-                            <li><a href="#">Web Design</a></li>
-                            <li><a href="#">Cyber Security</a></li>
-                            <li><a href="#">Developer Training</a></li>
-                        </ui>
+                        <div class="footer-menu">
+                            <h4>About Netmatters</h4>
 
-                    </div>
+                            <ui>
+                                <li><a href="#">News</a></li>
+                                <li><a href="#">Our Careers</a></li>
+                                <li><a href="#">Our Team</a></li>
+                                <li><a href="#">Contact Us</a></li>
+                                <li><a href="#">Privacy Policy</a></li>
+                                <li><a href="#">Cookie Policy</a></li>
+                                <li><a href="#">Data Retention</a></li>
+                                <li><a href="#">CCTV Policy</a></li>
+                                <li><a href="#">Environmental Policy</a></li>
+                                <li><a href="#">Terms &amp; Conditions</a></li>
+                            </ui>
 
-                    <div class="footer-menu">
-                        <h4>Our Industries</h4>
+                        </div>
 
-                        <ui>
-                            <li><a href="#">Financial Services</a></li>
-                            <li><a href="#">Construction</a></li>
-                            <li><a href="#">Retail &amp; E-Commerce</a></li>
-                            <li><a href="#">Non-Profits</a></li>
-                            <li><a href="#">SME's</a></li>
-                            <li><a href="#">Healthcare</a></li>
-                            <li><a href="#">Education &amp; Training</a></li>
-                            <li><a href="#">Travel &amp; Leisure</a></li>
-                            <li><a href="#">Manufacturing &amp; Offshore</a></li>
-                        </ui>
+                        <div class="footer-menu">
+                            <h4>Our Services</h4>
 
-                    </div>
+                            <ui>
+                                <li><a href="#">Bespoke Software</a></li>
+                                <li><a href="#">IT Support</a></li>
+                                <li><a href="#">Digital Marketing</a></li>
+                                <li><a href="#">Telecoms Services</a></li>
+                                <li><a href="#">Web Design</a></li>
+                                <li><a href="#">Cyber Security</a></li>
+                                <li><a href="#">Developer Training</a></li>
+                            </ui>
 
-                    <div class="footer-menu">
-                        <h4>Locations</h4>
+                        </div>
 
-                        <ui>
-                            <li><a href="#">Cambridge Office</a></li>
-                            <li><a href="#">Wymondham Office</a></li>
-                            <li><a href="#">Great Yarmouth Office</a></li>
-                        </ui>
+                        <div class="footer-menu">
+                            <h4>Our Industries</h4>
 
+                            <ui>
+                                <li><a href="#">Financial Services</a></li>
+                                <li><a href="#">Construction</a></li>
+                                <li><a href="#">Retail &amp; E-Commerce</a></li>
+                                <li><a href="#">Non-Profits</a></li>
+                                <li><a href="#">SME's</a></li>
+                                <li><a href="#">Healthcare</a></li>
+                                <li><a href="#">Education &amp; Training</a></li>
+                                <li><a href="#">Travel &amp; Leisure</a></li>
+                                <li><a href="#">Manufacturing &amp; Offshore</a></li>
+                            </ui>
+
+                        </div>
+
+                        <div class="footer-menu">
+                            <h4>Locations</h4>
+
+                            <ui>
+                                <li><a href="#">Cambridge Office</a></li>
+                                <li><a href="#">Wymondham Office</a></li>
+                                <li><a href="#">Great Yarmouth Office</a></li>
+                            </ui>
+
+                        </div>
                     </div> 
-
                 </div>
             </div>
         </footer>
