--- a/index.html
+++ b/index.html
@@ -14,43 +14,96 @@
     </head>
 
     <body>
+        
+        <div class="brand-background">
+            <div class="middle container">
+                <div class="row">
+                    <div class="mid-col-1">
+                       <h2><strong>Welcome To Netmatters</strong></h2>
+
+                       <p><strong>
+                        Netmatters is a leading 
+                        <a href="#">Bespoke Software</a>, 
+                        <a href="#">IT Support</a>, and 
+                        <a href="#">Digital Marketing</a> company based in the East of England with offices in 
+                        <a href="#">Cambridge</a>, 
+                        <a href="#">Wymondham</a>, and 
+                        <a href="#">Great Yarmouth</a>.
+                       </strong></p>
+                       <p>
+                        We arn't tied into contracts with third-party providers, so you know that our recommendations for your business are based purely with one benefit in mind: to help improve your business with the most appropriate solutions.
+                       </p>
+                       <p>
+                        We pride ourselves on being an ethical business and have a unique business offering and cost model that ensures you get the most from our relationship in an upfront manner.
+                       </p>
+                       <div>
+                        <a href="#" class="mid-btn-1" target="_blank">WHY CHOOSE US?</a>
+                        <a href="#" class="mid-btn-1" target="_blank">OUR CULTURE</a>
+                       </div>
+                       <dive>
+                        
+                        <h2><strong>What Our Clients Think</strong></h2>
+
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <p>
+                            <span class="client-quote">
+                                Netmatters stood out from the start. Great guys and very easy to work with. Both the build and digital marketing teams are clearly skilled -they know their stuff! They delivered a website to our (high!) expectations and went over and above to ensure we were satisfied clients - and we are!
+                            </span>
+                        </p>
+                        <p>
+                            <span class="client-quote-auther">
+                                Elanor Bishop, Head of Marketing - 
+                                <a href="#">Ashcroft Partnership LLP</a>
+                            </span>
+                        </p>
+                       </dive>
+                    </div>
+                </div>
+            </div>
+        </div>        
+
         <footer>
-            <div class="container">
-
+            <div class="container">               
                 <div class="footer-row">
-
                     <div class="footer-logo-box">
-
                         <div class="footer-logo">
                             <picture>
                                 <source srcset="/images/nm-logo-white-med.png" type="image/png">
                                 <img class="img" src="/images/nm-logo-white-med.png" alt="Netmatters Logo">
                             </picture>
                         </div>
-
                         <h4>Follow us on:</h4>
 
                         <div class="footer-social-logos">
-                            <svg class="logo logo-1">
-                                <use xlink:href="./sprite.svg#icon-facebook"></use>
-                            </svg>
-                            <svg class="logo logo-2">
-                                <use xlink:href="./sprite.svg#icon-linkedin2"></use>
-                            </svg >
-                            <svg class="logo logo-3">
-                                <use xlink:href="./sprite.svg#icon-x"></use>
-                            </svg>
-                            <svg class="logo logo-4">
-                                <use xlink:href="./sprite.svg#icon-instagram"></use>
-                            </svg>
+                            <a href="#" class="logo-button">
+                                <svg class="logo-icon">
+                                    <use xlink:href="./sprite.svg#icon-facebook" alt="Logo"></use>
+                                </svg>
+                            </a>
+                            <a href="#" class="logo-button">
+                                <svg class="logo-icon">
+                                    <use xlink:href="./sprite.svg#icon-linkedin2" alt="Logo"></use>
+                                </svg >
+                            </a>
+                            <a href="#" class="logo-button">
+                                <svg class="logo-icon">
+                                    <use xlink:href="./sprite.svg#icon-x" alt="Logo"></use>
+                                </svg>
+                            </a>
+                            <a href="#" class="logo-button">
+                                <svg class="logo-icon">
+                                    <use xlink:href="./sprite.svg#icon-instagram" alt="Logo"></use>
+                                </svg>
+                            </a>
                         </div>
                     </div>
-
                     <div class="footer-menu-box">
-
-                        <div class="footer-menu">
+                        <div class="row footer-menu">
                             <h4>About Netmatters</h4>
-
                             <ui>
                                 <li><a href="#">News</a></li>
                                 <li><a href="#">Our Careers</a></li>
@@ -63,12 +116,9 @@
                                 <li><a href="#">Environmental Policy</a></li>
                                 <li><a href="#">Terms &amp; Conditions</a></li>
                             </ui>
-
                         </div>
-
                         <div class="footer-menu">
                             <h4>Our Services</h4>
-
                             <ui>
                                 <li><a href="#">Bespoke Software</a></li>
                                 <li><a href="#">IT Support</a></li>
@@ -78,12 +128,9 @@
                                 <li><a href="#">Cyber Security</a></li>
                                 <li><a href="#">Developer Training</a></li>
                             </ui>
-
                         </div>
-
                         <div class="footer-menu">
                             <h4>Our Industries</h4>
-
                             <ui>
                                 <li><a href="#">Financial Services</a></li>
                                 <li><a href="#">Construction</a></li>
@@ -95,22 +142,32 @@
                                 <li><a href="#">Travel &amp; Leisure</a></li>
                                 <li><a href="#">Manufacturing &amp; Offshore</a></li>
                             </ui>
-
                         </div>
-
                         <div class="footer-menu">
                             <h4>Locations</h4>
-
                             <ui>
                                 <li><a href="#">Cambridge Office</a></li>
                                 <li><a href="#">Wymondham Office</a></li>
                                 <li><a href="#">Great Yarmouth Office</a></li>
                             </ui>
-
                         </div>
                     </div> 
                 </div>
             </div>
         </footer>
+        <div class="footer-bottom-box">
+            <div class="container container-footer-bottom">
+                <div class="license">
+                    &copy; Copyright Netmatters 2025.
+                    <br class="license-2">
+                    All rights reserved.
+                    <ul>
+                        <li>
+                            <a href="#"> Sitemap </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>  
     </body>
 </html>
