Updated Netmatters Website

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <body>
         
-        <div class="brand-background">
-            <div class="middle container">
+        <div class="middle">
+            <div class="container">
                 <div class="row">
                     <div class="mid-col-1">
                        <h2><strong>Welcome To Netmatters</strong></h2>
@@ -37,11 +37,11 @@
                         We pride ourselves on being an ethical business and have a unique business offering and cost model that ensures you get the most from our relationship in an upfront manner.
                        </p>
                        <div>
-                        <a href="#" class="mid-btn-1" target="_blank">WHY CHOOSE US?</a>
-                        <a href="#" class="mid-btn-1" target="_blank">OUR CULTURE</a>
+                        <a href="#" class="mid-btn-1" target="_blank">Why Choose Us?</a>
+                        <a href="#" class="mid-btn-1" target="_blank">Our Culture</a>
                        </div>
-                       <dive>
-                        
+                    </div>
+                    <div class="mid-col-2">
                         <h2><strong>What Our Clients Think</strong></h2>
 
                         <div></div>
@@ -60,15 +60,18 @@
                                 <a href="#">Ashcroft Partnership LLP</a>
                             </span>
                         </p>
-                       </dive>
-                    </div>
+                        <div>
+                        <a href="#" class="mid-btn-2" target="_blank">Google Reviews</a>
+                        <a href="#" class="mid-btn-3" target="_blank">Trustpilot Reviews</a>
+                        </div>
+                    </div>                    
                 </div>
             </div>
         </div>        
 
         <footer>
-            <div class="container">               
-                <div class="footer-row">
+            <div class="footer-row">               
+                <div class="container">
                     <div class="footer-logo-box">
                         <div class="footer-logo">
                             <picture>
@@ -156,7 +159,7 @@
             </div>
         </footer>
         <div class="footer-bottom-box">
-            <div class="container container-footer-bottom">
+            <div class="container">
                 <div class="license">
                     &copy; Copyright Netmatters 2025.
                     <br class="license-2">
