--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta chartset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maxium-scale=1"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
         <meta name="ROBOTS" content="NOINDEX,NOFOLLOW">
 
         <link rel="stylesheet" href="css/style.css">
@@ -19,9 +19,10 @@
             <div class="container">
                 <div class="row">
                     <div class="mid-col-1">
-                       <h2><strong>Welcome To Netmatters</strong></h2>
+                       <h2 ><strong class="strong-title">Welcome To Netmatters</strong></h2>
 
-                       <p><strong>
+                       <p>
+                        <strong class="strong-paragraph">
                         Netmatters is a leading 
                         <a href="#">Bespoke Software</a>, 
                         <a href="#">IT Support</a>, and 
@@ -29,7 +30,8 @@
                         <a href="#">Cambridge</a>, 
                         <a href="#">Wymondham</a>, and 
                         <a href="#">Great Yarmouth</a>.
-                       </strong></p>
+                        </strong>
+                        </p>
                        <p>
                         We arn't tied into contracts with third-party providers, so you know that our recommendations for your business are based purely with one benefit in mind: to help improve your business with the most appropriate solutions.
                        </p>
@@ -42,7 +44,7 @@
                        </div>
                     </div>
                     <div class="mid-col-2">
-                        <h2><strong>What Our Clients Think</strong></h2>
+                        <h2><strong class="strong-title">What Our Clients Think</strong></h2>
 
                         <div></div>
                         <div></div>
@@ -70,8 +72,8 @@
         </div>        
 
         <footer>
-            <div class="footer-row">               
-                <div class="container">
+            <div class="container">               
+                <div class="Footer-flex-container">
                     <div class="footer-logo-box">
                         <div class="footer-logo">
                             <picture>
@@ -105,7 +107,7 @@
                         </div>
                     </div>
                     <div class="footer-menu-box">
-                        <div class="row footer-menu">
+                        <div class="footer-menu">
                             <h4>About Netmatters</h4>
                             <ui>
                                 <li><a href="#">News</a></li>
@@ -160,16 +162,24 @@
         </footer>
         <div class="footer-bottom-box">
             <div class="container">
-                <div class="license">
-                    &copy; Copyright Netmatters 2025.
-                    <br class="license-2">
-                    All rights reserved.
-                    <ul>
-                        <li>
-                            <a href="#"> Sitemap </a>
-                        </li>
-                    </ul>
-                </div>
+                <div class="row">
+                    <div class="license-1">
+                        &copy; Copyright Netmatters 2025.
+                    </div>    
+                    <div class="license-2">
+                        All rights reserved.
+                    </div>
+                    <div class="license-3">
+                        -
+                    </div>
+                    <div class="license-4">
+                        <ul>
+                            <li>
+                                <a href="#"> Sitemap </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>    
             </div>
         </div>  
     </body>
