Updated Netmatters Website

--- a/index.html
+++ b/index.html
@@ -14,22 +14,115 @@
     </head>
 
     <body>
-        
+        <div class="top">
+            <div class="grid content">
+                <div class="service list">
+                    <h2 calss="top-h2">Our Services</h2>
+                    <h1>
+                        <a href="#" class="h1-link" target="_blank">View Our Work</a>
+                    </h1>
+                    <div class="top-box top-box-1 flex">
+                        <a href="#" class="block software" target="_blank">
+                            <span class="icon"></span>
+                            <span class="h2">Bespoke Software</span>
+                            <span class="p">
+                                Bespoke software solutions for all your business needs including integrations and reporting.
+                            </span>
+                            <span class="btn-container">
+                                <span class="btn btn-software">Read More</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="top-box top-box-2 flex">
+                        <a href="#" class="block it" target="_blank">
+                            <span class="icon"></span>
+                            <span class="h2">IT Support</span>
+                            <span class="p">
+                                Fully managed IT support and consultancy packages tailored to meet your exact business needs.
+                            </span>
+                            <span class="btn-container">
+                                <span class="btn btn-it">Read More</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="top-box top-box-3 flex">
+                        <a href="#" class="block digital" target="_blank">
+                            <span class="icon"></span>
+                            <span class="h2">Digital Marketing</span>
+                            <span class="p">
+                                Driven brand awareness & ROI through creative digital marketing campaigns.
+                            </span>
+                            <span class="btn-container">
+                                <span class="btn btn-digital">Read More</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="top-box top-box-4 flex">
+                        <a href="#" class="block telecoms" target="_blank">
+                            <span class="icon"></span>
+                            <span class="h2">Telecoms Services</span>
+                            <span class="p">
+                                Business telephony solutions including mobile & connectivity solutions.
+                            </span>
+                            <span class="btn-container">
+                                <span class="btn btn-telecoms">Read More</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="top-box top-box-5 flex">
+                        <a href="#" class="block web" target="_blank">
+                            <span class="icon"></span>
+                            <span class="h2">Web Design</span>
+                            <span class="p">
+                                User-centric design for businesses looking to make a lasting impression.
+                            </span>
+                            <span class="btn-container">
+                                <span class="btn btn-web">Read More</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="top-box top-box-6 flex">
+                        <a href="#" class="block security" target="_blank">
+                            <span class="icon"></span>
+                            <span class="h2">Cyber Security</span>
+                            <span class="p">
+                                Prevention, testing, consultancy & breach management services.
+                            </span>
+                            <span class="btn-container">
+                                <span class="btn btn-security">Read More</span>
+                            </span>
+                        </a>
+                    </div>
+                    <div class="top-box top-box-7 flex">
+                        <a href="#" class="block training" target="_blank">
+                            <span class="icon"></span>
+                            <span class="h2">Developer Training</span>
+                            <span class="p">
+                                Web design & software training courses designed to secure a job in tech.
+                            </span>
+                            <span class="btn-container">
+                                <span class="btn btn-training">Read More</span>
+                            </span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="middle">
             <div class="container">
-                <div class="row">
+                <div class="middle-row">
                     <div class="mid-col-1">
                        <h2 ><strong class="strong-title">Welcome To Netmatters</strong></h2>
 
                        <p>
                         <strong class="strong-paragraph">
                         Netmatters is a leading 
-                        <a href="#">Bespoke Software</a>, 
-                        <a href="#">IT Support</a>, and 
-                        <a href="#">Digital Marketing</a> company based in the East of England with offices in 
-                        <a href="#">Cambridge</a>, 
-                        <a href="#">Wymondham</a>, and 
-                        <a href="#">Great Yarmouth</a>.
+                        <a href="#" class="strong-paragraph">Bespoke Software</a>, 
+                        <a href="#" class="strong-paragraph">IT Support</a>, and 
+                        <a href="#" class="strong-paragraph">Digital Marketing</a> company based in the East of England with offices in 
+                        <a href="#" class="strong-paragraph">Cambridge</a>, 
+                        <a href="#" class="strong-paragraph">Wymondham</a>, and 
+                        <a href="#" class="strong-paragraph">Great Yarmouth</a>.
                         </strong>
                         </p>
                        <p>
@@ -38,39 +131,59 @@
                        <p>
                         We pride ourselves on being an ethical business and have a unique business offering and cost model that ensures you get the most from our relationship in an upfront manner.
                        </p>
-                       <div>
-                        <a href="#" class="mid-btn-1" target="_blank">Why Choose Us?</a>
-                        <a href="#" class="mid-btn-1" target="_blank">Our Culture</a>
+                       <div class="middle-buttons">
+                        <a href="#" class="mid-btn mid-btn-1" target="_blank">Why Choose Us?</a>
+                        <a href="#" class="mid-btn mid-btn-1" target="_blank">Our Culture</a>
                        </div>
                     </div>
                     <div class="mid-col-2">
                         <h2><strong class="strong-title">What Our Clients Think</strong></h2>
-
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
+                        <!-- <div>                            
+                            <div>
+                                <svg class="star-icon">
+                                    <use xlink:href="./sprite.svg#icon-facebook" alt="Star"></use>
+                                </svg>
+                            </div>
+                            <div>
+                                <svg class="star-icon">
+                                    <use xlink:href="./sprite.svg#icon-star-full" alt="Star"></use>
+                                </svg>
+                            </div>
+                            <div>
+                                <svg class="star-icon">
+                                    <use xlink:href="./sprite.svg#icon-star-full" alt="Star"></use>
+                                </svg>
+                            </div>
+                            <div>
+                                <svg class="star-icon">
+                                    <use xlink:href="./sprite.svg#icon-star-full" alt="Star"></use>
+                                </svg>
+                            </div>
+                            <div>
+                                <svg class="star-icon">
+                                    <use xlink:href="./sprite.svg#icon-star-full" alt="Star"></use>
+                                </svg>
+                            </div>
+                        </div> -->
                         <p>
                             <span class="client-quote">
                                 Netmatters stood out from the start. Great guys and very easy to work with. Both the build and digital marketing teams are clearly skilled -they know their stuff! They delivered a website to our (high!) expectations and went over and above to ensure we were satisfied clients - and we are!
                             </span>
                         </p>
                         <p>
-                            <span class="client-quote-auther">
+                            <span class="client-quote-author">
                                 Elanor Bishop, Head of Marketing - 
-                                <a href="#">Ashcroft Partnership LLP</a>
+                                <a href="#" class="client">Ashcroft Partnership LLP</a>
                             </span>
                         </p>
-                        <div>
-                        <a href="#" class="mid-btn-2" target="_blank">Google Reviews</a>
-                        <a href="#" class="mid-btn-3" target="_blank">Trustpilot Reviews</a>
+                        <div class="middle-buttons">
+                        <a href="#" class="mid-btn mid-btn-2" target="_blank">Google Reviews</a>
+                        <a href="#" class="mid-btn mid-btn-3" target="_blank">Trustpilot Reviews</a>
                         </div>
                     </div>                    
                 </div>
             </div>
         </div>        
-
         <footer>
             <div class="container">               
                 <div class="Footer-flex-container">
@@ -84,22 +197,22 @@
                         <h4>Follow us on:</h4>
 
                         <div class="footer-social-logos">
-                            <a href="#" class="logo-button">
+                            <a href="#" class="logo-button logo-button-1" target="_blank">
                                 <svg class="logo-icon">
                                     <use xlink:href="./sprite.svg#icon-facebook" alt="Logo"></use>
                                 </svg>
                             </a>
-                            <a href="#" class="logo-button">
+                            <a href="#" class="logo-button logo-button-2" target="_blank">
                                 <svg class="logo-icon">
                                     <use xlink:href="./sprite.svg#icon-linkedin2" alt="Logo"></use>
                                 </svg >
                             </a>
-                            <a href="#" class="logo-button">
+                            <a href="#" class="logo-button logo-button-3" target="_blank">
                                 <svg class="logo-icon">
                                     <use xlink:href="./sprite.svg#icon-x" alt="Logo"></use>
                                 </svg>
                             </a>
-                            <a href="#" class="logo-button">
+                            <a href="#" class="logo-button logo-button-4" target="_blank">
                                 <svg class="logo-icon">
                                     <use xlink:href="./sprite.svg#icon-instagram" alt="Logo"></use>
                                 </svg>
@@ -159,16 +272,16 @@
                     </div> 
                 </div>
             </div>
-        </footer>
+        </footer>        
         <div class="footer-bottom-box">
-            <div class="container">
-                <div class="row">
-                    <div class="license-1">
-                        &copy; Copyright Netmatters 2025.
-                    </div>    
-                    <div class="license-2">
-                        All rights reserved.
-                    </div>
+            <div class="footer-bottom-column">
+                <div class="license-1">
+                    &copy; Copyright Netmatters 2025.
+                </div>    
+                <div class="license-2">
+                    All rights reserved.
+                </div>
+                <div class="row-group">
                     <div class="license-3">
                         -
                     </div>
@@ -179,8 +292,8 @@
                             </li>
                         </ul>
                     </div>
-                </div>    
-            </div>
-        </div>  
+                </div>
+            </div>    
+        </div>          
     </body>
 </html>
